--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,37 @@
 {
-  "name": "neighborhood-help-backend",
+  "name": "neighborly-backend",
   "version": "1.0.0",
-  "description": "Backend for Neighborhood Help Platform",
+  "description": "Backend for Neighborly Platform",
+  "type": "module",
   "main": "server-express.js",
   "scripts": {
-    "start": "node server-express.js",
-    "dev": "nodemon server-express.js",
+    "start": "node dist/server-express.js",
+    "start:ts": "tsx server-express.ts",
+    "dev": "cross-env NODE_OPTIONS=--no-deprecation tsx watch server-express.ts",
+    "dev:ts": "cross-env NODE_OPTIONS=--no-deprecation tsx watch server-express.ts",
+    "build": "tsc",
+    "build:watch": "tsc --watch",
     "migrate:up": "psql -h $DB_HOST -U $DB_USER -d $DB_NAME -f migrations/001_initial_schema.sql && psql -h $DB_HOST -U $DB_USER -d $DB_NAME -f migrations/002_chat_system.sql && psql -h $DB_HOST -U $DB_USER -d $DB_NAME -f migrations/003_help_offers.sql",
     "migrate:reset": "psql -h $DB_HOST -U $DB_USER -d $DB_NAME -c 'DROP SCHEMA public CASCADE; CREATE SCHEMA public;'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "echo 'Linting skipped'",
-    "prod": "NODE_ENV=production node server-express.js"
+    "lint": "eslint . --ext .ts",
+    "prod": "NODE_ENV=production node dist/server-express.js",
+    "prod:ts": "NODE_ENV=production tsx server-express.ts"
   },
   "keywords": [
-    "neighborhood",
+    "neighborly",
     "help",
     "community"
   ],
   "author": "",
   "license": "MIT",
-  "type": "commonjs",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
+    "google-auth-library": "^10.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
@@ -33,6 +40,22 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@eslint/js": "^9.31.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.0.13",
+    "@types/nodemailer": "^6.4.17",
+    "@types/pg": "^8.15.4",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.31.0",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.8.3"
   }
 }
